--- a/static/index.html
+++ b/static/index.html
@@ -61,6 +61,33 @@
             gap: 0.5rem;
         }
 
+        .btn-api-docs {
+            padding: 0.5rem 1rem;
+            background: #334155;
+            border: 1px solid #475569;
+            border-radius: 0.5rem;
+            color: #e2e8f0;
+            font-size: 0.875rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            text-decoration: none;
+        }
+
+        .btn-api-docs:hover {
+            background: #3b82f6;
+            border-color: #3b82f6;
+            color: white;
+        }
+
+        .btn-api-docs svg {
+            width: 16px;
+            height: 16px;
+        }
+
         .status-indicator {
             width: 10px;
             height: 10px;
@@ -775,6 +802,16 @@
     <header class="header">
         <h1>KI Trading Model Dashboard</h1>
         <div class="header-info">
+            <a href="/docs" target="_blank" class="btn-api-docs" title="API Dokumentation in neuem Tab öffnen">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                    <polyline points="14 2 14 8 20 8"></polyline>
+                    <line x1="16" y1="13" x2="8" y2="13"></line>
+                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                    <polyline points="10 9 9 9 8 9"></polyline>
+                </svg>
+                API Docs
+            </a>
             <div class="release-info">
                 <span class="release-version" id="releaseVersion">v1.0.0</span>
                 <span class="release-date" id="releaseDate">-</span>
